<resources>
    <string name="app_name">Kitty City</string>
    <string name="game_activity_title">Get Coins</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">Kitty City</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="password_text">Password</string>
    <string name="phone_text">Phone number</string>
    <string name="name_text">Name</string>
    <string name="signup_text">Create Account</string>
    <string name="login_link">Already a member? Login</string>
    <string name="add_widget_text">Add widget</string>
    <string name="my_kitties_text">My Kitties</string>
    <string name="settings_text">Settings</string>
    <string name="login_text">Login</string>
    <string name="kitty_image_profile">Kitty Image</string>
    <string name="kitty_image">Kitty Image</string>

</resources>
